# coverburn

./: .gitignore  README.md  pyproject.toml
src/: cover_scout.py  coverscout.py  find_cover_slides.py  ocr_probe.py
